--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="doc-nav__inner">
         <div class="doc-nav__dashboard">
           <a class="doc-nav__link" href="/index.html">
-            <span class="doc-nav__text"><i class="fas fa-home"></i>&nbsp;&nbsp;Dashboard</span>
+            <span class="doc-nav__text"><i class="fas fa-home"></i>&nbsp;&nbsp;Dashboard111</span>
           </a>
         </div>
         <div class="doc-nav__1depth">
