--- a/index.html
+++ b/index.html
@@ -19,13 +19,24 @@
 <body>
   <div class="doc-wrap">
     <header class="doc-header">
-      <h1>HEADER</h1>
+      <div class="doc-header__inner">
+        <h1 class="doc-header__logo"><a class="doc-header__logo-link" href="#">알콩달콩</a></h1>
+        <div class="doc-header__title">경남은행 콩시스템 관리자</div>
+        <aside class="doc-header__aside">
+          <div class="doc-header__user">
+            <strong class="doc-header__user-name">홍길동(활빈당지부)</strong>
+          </div>
+          <div class="doc-header__logout">
+            <a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
+          </div>
+        </aside>
+      </div>
     </header>
     <nav class="doc-nav">
       <div class="doc-nav__inner">
         <div class="doc-nav__dashboard">
           <a class="doc-nav__link" href="/index.html">
-            <span class="doc-nav__text"><i class="fas fa-home"></i>&nbsp;&nbsp;Dashboard111</span>
+            <span class="doc-nav__text"><i class="fas fa-home"></i>&nbsp;&nbsp;Dashboard</span>
           </a>
         </div>
         <div class="doc-nav__1depth">
