초기 페이지 template 업로드

--- a/index.html
+++ b/index.html
@@ -620,18 +620,19 @@ $(".datepicker").flatpickr(defaultOption);</code>
 
           <div id="tabs" class="guide-box">
             <h1><a href="#tabs">tabs</a></h1>
-            <div class="tabs">
-              <div class="tabs-item">
-                <a class="tabs-item__button" href="#">TAB01</a>
+            <h2>tab-grid</h2>
+            <div class="tab-grid">
+              <div class="tab-grid__item tab-grid__item--is-active">
+                <a class="tab-grid__button" href="#">TAB01</a>
               </div>
-              <div class="tabs-item">
-                <a class="tabs-item__button" href="#">TAB02</a>
+              <div class="tab-grid__item">
+                <a class="tab-grid__button" href="#">TAB02</a>
               </div>
-              <div class="tabs-item">
-                <a class="tabs-item__button" href="#">TAB03</a>
+              <div class="tab-grid__item">
+                <a class="tab-grid__button" href="#">TAB03</a>
               </div>
-              <div class="tabs-item">
-                <a class="tabs-item__button" href="#">TAB04</a>
+              <div class="tab-grid__item">
+                <a class="tab-grid__button" href="#">TAB04</a>
               </div>
             </div>
           </div>
