--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         <div id="pagenation" class="guide-box">
           <h1><a href="#pagenation">pagenation</a></h1>
-
+          <strong style="color:red">절대 개발자툴에서 복붙금지 SVG코드가 그대로 노출되서 복사됨</strong>
           <div class="pagenation">
             <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-left"></i></a>
             <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-left"></i></a>
