--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ $(".datepicker").flatpickr(defaultOption);</code>
             <button class="button" type="button">default</button>
             <button class="button button--type-link" type="button">type link</button>
             <h2>button flat</h2>
-            <button type="button" class="button button--flat-prmary">flat-prmary</button>
+            <button type="button" class="button button--flat-primary">flat-prmary</button>
             <button type="button" class="button button--flat-secondary">flat-secondary</button>
             <button type="button" class="button button--flat-success">flat-success</button>
             <button type="button" class="button button--flat-warning">flat-warning</button>
@@ -609,7 +609,7 @@ $(".datepicker").flatpickr(defaultOption);</code>
               </div>
               <div class="button-group--position-right">
                 <button type="button" class="button button--flat-secondary">취소</button>
-                <button type="button" class="button button--flat-prmary">확인</button>
+                <button type="button" class="button button--flat-primary">확인</button>
               </div>
             </div>
 
@@ -1039,7 +1039,7 @@ $(".datepicker").flatpickr(defaultOption);</code>
       <footer class="layer-footer">
         <div class="button-group">
           <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
-          <button type="button" class="button button--flat-prmary">확인</button>
+          <button type="button" class="button button--flat-primary">확인</button>
         </div>
 
       </footer>
