--- a/pages/02.kong/02.kongcount.html
+++ b/pages/02.kong/02.kongcount.html
@@ -14,6 +14,11 @@
 
   <script src="/assets/libs/font-awesome@5.15.3/js/all.min.js"></script>
   <script src="/assets/libs/jquery/jquery-3.6.0.min.js"></script>
+  
+  <link href="/assets/plugins/flatpickr@4.6.9/css/flatpickr.min.css" type="text/css" rel="stylesheet" />
+  <link href="/assets/plugins/flatpickr@4.6.9/css/themes/material_red.css" type="text/css" rel="stylesheet" />
+  <script src="/assets/plugins/flatpickr@4.6.9/js/flatpickr.js"></script>
+  <script src="/assets/plugins/flatpickr@4.6.9/js/ko.js"></script>
 </head>
 
 <body>
@@ -192,8 +197,16 @@
             <table>
               <caption></caption>
               <colgroup>
+                <col width="54px">
                 <col>
-                
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col width="120px">
               </colgroup>
               <thead>
                 <tr>
@@ -205,7 +218,7 @@
                   <th scope="col">변경 후 (알/달/황금)콩</th>
                   <th scope="col">수여자 행번<br><button type="button" class="button button--flat-warning" data-layer="#popupDoner">일괄적용</button></th>
                   <th scope="col">수여자 이름</th>
-                  <th scope="col">편지<br><button type="button" class="button button--flat-warning">일괄적용</button></th>
+                  <th scope="col">편지<br><button type="button" class="button button--flat-warning" data-layer="#popupLetter">일괄적용</button></th>
                   <th></th>
                 </tr>
               </thead>
@@ -249,8 +262,6 @@
           </div>
       </div>
     </main>
-
-
   </div>
 
   <!-- 콩 일괄 적용 -->
@@ -335,6 +346,27 @@
   <!-- // 콩 일괄 적용 -->
 
 
+  <!-- 편지 일괄 적용 -->
+  <div class="layer" id="popupLetter">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 500px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">편지 일괄 적용</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <textarea style="height: 200px;"></textarea>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">일괄적용</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 편지 일괄 적용 -->
 
 
 
@@ -344,24 +376,9 @@
 
   <script src="/assets/js/common.js"></script>
 
-
-
-
-
   <script>
     $(document).ready(function () {
       console.log('??');
-
-      var $btn = $('[data-layer]');
-   
-  
-      $btn.on('click', function(){
-        var _this = $(this),
-          $layerEle = $(_this.data('layer'))
-          $layerEle.layerOpen()
-      })
-      $('[data-layerBtnClose]').layerClose();
-
     });
   </script>
 
