--- a/index.html
+++ b/index.html
@@ -339,6 +339,78 @@
                 </tr>
               </tbody>
             </table>
+
+
+
+
+
+
+            <h2>sort</h2>
+
+            <div class="table">
+              <table>
+                <caption></caption>
+                <colgroup>
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                </colgroup>
+                <thead>
+                  <tr>
+                    <th scope="col">테이블 헤드01<button class="button-sort" type="button">sort</button></th>
+                    <th scope="col">테이블 헤드01<button class="button-sort button-sort--state-up" type="button">sort</button></th>
+                    <th scope="col">테이블 헤드01<button class="button-sort button-sort--state-down" type="button">sort</button></th>
+                    <th scope="col">테이블 헤드01<button class="button-sort" type="button">sort</button></th>
+                    <th scope="col">테이블 헤드01<button class="button-sort" type="button">sort</button></th>
+                    <th scope="col">테이블 헤드01<button class="button-sort" type="button">sort</button></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                  </tr>
+                  <tr>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                  </tr>
+                  <tr>
+                    <td>테이블 내용</td>
+                    <td class="text--type-ellipsis">테이블 내용에 말줄임을 하고 싶을때는 어떻게 할까</td>
+                    <td>text--type-ellipsis class를 넣자</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                  </tr>
+                  <tr>
+                    <td class="text--align-left">text--align-left</td>
+                    <td class="text--align-center">text--align-center</td>
+                    <td class="text--align-right">text--align-right</td>
+                    <td>기본값 cneter</td>
+                    <td>테이블 내용</td>
+                    <td>테이블 내용</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">vertical-align<br /><br /><br /><br /></th>
+                    <td class="vertical--align-top">vertical--align-top</td>
+                    <td class="vertical--align-middle">vertical--align-middle</td>
+                    <td class="vertical--align-bottom">vertical--align-bottom</td>
+                    <td>기본값 middle</td>
+                    <td>테이블 내용</td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
         </div>
 
