--- a/pages/03.product/01.add.html
+++ b/pages/03.product/01.add.html
@@ -14,12 +14,28 @@
 
   <script src="/assets/libs/font-awesome@5.15.3/js/all.min.js"></script>
   <script src="/assets/libs/jquery/jquery-3.6.0.min.js"></script>
+  
+  <link href="/assets/plugins/flatpickr@4.6.9/css/flatpickr.min.css" type="text/css" rel="stylesheet" />
+  <link href="/assets/plugins/flatpickr@4.6.9/css/themes/material_red.css" type="text/css" rel="stylesheet" />
+  <script src="/assets/plugins/flatpickr@4.6.9/js/flatpickr.js"></script>
+  <script src="/assets/plugins/flatpickr@4.6.9/js/ko.js"></script>
 </head>
 
 <body>
   <div class="doc-wrap">
     <header class="doc-header">
-      <h1>HEADER</h1>
+      <div class="doc-header__inner">
+        <h1 class="doc-header__logo"><a class="doc-header__logo-link" href="#">알콩달콩</a></h1>
+        <div class="doc-header__title">경남은행 콩시스템 관리자</div>
+        <aside class="doc-header__aside">
+          <div class="doc-header__user">
+            <strong class="doc-header__user-name">홍길동(활빈당지부)</strong>
+          </div>
+          <div class="doc-header__logout">
+            <a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
+          </div>
+        </aside>
+      </div>
     </header>
     <nav class="doc-nav">
       <div class="doc-nav__inner">
@@ -137,6 +153,11 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
         </div>
 
 
@@ -144,7 +165,102 @@
       </div>
     </nav>
     <main class="doc-main">
-      <div class="doc-contents">123123</div>
+      <div class="doc-contents">
+        <nav class="breadcrumb">
+          <a class="breadcrumb__home" href="#"><i style="width:18px" class="fas fa-home"></i></a>
+
+          <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+          <a href="" class="breadcrumb__link">상품설정 관리</a>
+
+          <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+          <a href="" class="breadcrumb__link">상품등록 관리</a>
+        </nav>
+        <h2 class="page-title">상품등록 관리</h2>
+
+        <section class="page-section">
+          <h3 class="page-section__title">상품유형</h3>
+          <span class="form-select">
+            <select>
+              <option value="" selected>전체</option>
+              <option value="option01">운영중인 상품</option>
+              <option value="option02">화면노출 상품</option>
+            </select>
+          </span>
+        </section>
+
+        <section class="page-section">
+          <h3 class="page-section__title">운영중인 상품목록</h3>
+          <div class="table">
+            <table>
+              <caption></caption>
+              <colgroup>
+                <col width="54px">
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+              </colgroup>
+              <thead>
+                <tr>
+                  <th scope="col">선택</th>
+                  <th scope="col">상품일련번호</th>
+                  <th scope="col">상품명</th>
+                  <th scope="col">이미지</th>
+                  <th scope="col">등록일</th>
+                  <th scope="col">최종수정일</th>
+                  <th scope="col">운영종료일</th>
+                  <th scope="col">상품운영여부</th>
+                  <th scope="col">화면노출여부</th>
+                  <th scope="col">황금콩 개수</th>
+                  <th scope="col">운영수량</th>
+                  <th scope="col">신청수량</th>
+                  <th scope="col">잔여수량</th>
+                  <th scope="col">최초등록자</th>
+                  <th scope="col">최종수정자</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input id="checkbox01" type="checkbox" name="checkboxname01"></td>
+                  <td>0001</td>
+                  <td>스타벅스 텀블러</td>
+                  <td><button type="button" class="button button--outline-secondary">보기</button></td>
+                  <td>2021-03-02</td>
+                  <td>2023-03-01</td>
+                  <td>Y</td>
+                  <td>Y</td>
+                  <td>14</td>
+                  <td>50</td>
+                  <td>12</td>
+                  <td>12</td>
+                  <td>0</td>
+                  <td>행원1</td>
+                  <td>관리자1</td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="button-group">
+              <div class="button-group--position-left">
+                <button type="button" class="button button--flat-secondary">엑셀저장</button>
+              </div>
+              <div class="button-group--position-right">
+                <button class="button button--flat-primary" type="button" data-layer="#popupProductModify">수정하기</button>
+                <button class="button button--flat-primary" type="button" data-layer="#popupProductAdd">신규등록</button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
 
@@ -152,7 +268,223 @@
 
 
 
+  <!-- 상품신규등록 -->
+  <div class="layer" id="popupProductAdd">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 800px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">상품신규등록</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <div class="filter-wrap">
+            <div class="filter-row">
+              <div class="filter-cell__title">이미지<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <img src="https://via.placeholder.com/150" />
+                <span style="vertical-align: bottom; margin-left: 4px;">
+                  <button type="button" class="button button--outline-success">변경</button>
+                  <button type="button" class="button button--outline-primary">등록</button>
+                </span>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">상품일련번호</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" readonly />
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">상품명<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text"  />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">운영시작일<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker" />
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">운영종료일<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker" />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">운영수량<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text"  />
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">황금콩 개수<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text"  />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">상품운영여부<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select readonly>
+                    <option value="1" selected>Y</option>
+                  </select>
+                </span>
+              </div>
+              <div class="filter-cell__title">화면노출여부<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-select">
+                    <select>
+                      <option value="1" selected>Y</option>
+                      <option value="0">N</option>
+                    </select>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">등록하기</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 상품신규등록 -->
 
+  <!-- 상품수정 -->
+  <div class="layer" id="popupProductModify">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 800px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">상품수정</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <div class="filter-wrap">
+            <div class="filter-row">
+              <div class="filter-cell__title">이미지<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <img src="https://via.placeholder.com/150" />
+                <span style="vertical-align: bottom; margin-left: 4px;">
+                  <button type="button" class="button button--outline-success">변경</button>
+                </span>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">상품일련번호</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" disabled value="0001"/>
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">상품명<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" disabled value="스타벅스 텀블러"/>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">운영시작일<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" disabled value="2021-08-26"/>
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">운영종료일<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker" />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">운영수량<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text"  />
+                  </span>
+                </div>
+              </div>
+              <div class="filter-cell__title">황금콩 개수<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text"  />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">상품운영여부<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select>
+                    <option value="1" selected>Y</option>
+                    <option value="0">N</option>
+                  </select>
+                </span>
+              </div>
+              <div class="filter-cell__title">화면노출여부<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-select">
+                    <select>
+                      <option value="1" selected>Y</option>
+                      <option value="0">N</option>
+                    </select>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">수정하기</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 상품수정 -->
+
+  
 
 
   <!-- <script src="/assets/libs/bootstrap@5.1.0/js/bootstrap.bundle.min.js"></script>
